--- a/CSS/promocao.css
+++ b/CSS/promocao.css
@@ -12,16 +12,6 @@
 
 }
 
-.container{
- 
-    background-color: rgb(67, 186, 207);
-    opacity: 0.9;
-    
-}
-
-.d-flex{
-    margin-left: 5em;
-}
 
 .nav-link{
     color: black;
@@ -41,10 +31,12 @@
 }
 
 .navbar{
- 
     background-color: rgb(67, 186, 207);
     opacity: 0.8;
     position: fixed;
+    transition: all .5s;
+    font-weight: bold;
+    margin-left: 7em;
 }
 
 
