--- a/CSS/home.css
+++ b/CSS/home.css
@@ -21,11 +21,11 @@
 }
 
 .nav-link{
+    color: black;
     transition: all .5s;
     font-weight: bold;
-    margin-right: 5em;
+    margin-left: 7em;
 }
-
 .nav-link:hover{
     border: 10px solid #781f40;
     border-radius: 50%;
@@ -35,6 +35,13 @@
     transform: rotateZ(-360deg) scale(1.5);
     border-radius: 10%;
    border: solid 1px rgb(36,172,215);
+}
+
+.navbar{
+ 
+    background-color: rgb(67, 186, 207);
+    opacity: 0.8;
+    position: fixed;
 }
 
 .botao-login {
@@ -51,12 +58,7 @@
     
 }
 
-.navbar{
- 
-    background-color: rgb(67, 186, 207);
-    opacity: 0.5;
-    position: fixed;
-}
+
 
 .titulo-header{
 
