--- a/CSS/login.css
+++ b/CSS/login.css
@@ -22,7 +22,7 @@
 .cadastro{
         background: white;
         width: 35%;
-        height: 35em;
+        height: 85%;
         border-radius: 10%;
         margin-top: 20px;
         -webkit-box-shadow: 9px -5px 24px -8px rgba(0,0,0,0.56);
