--- a/CSS/promocao.css
+++ b/CSS/promocao.css
@@ -30,7 +30,7 @@
    border: solid 1px rgb(36,172,215);
 }
 
-.navbar{
+#navegacao-cadastro{
     background-color: rgb(67, 186, 207);
     opacity: 0.8;
 }
